# evolution-ternary

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
src/: convergence.rs  engine.rs  fitness.rs  lib.rs  mutation.rs  population.rs  selection.rs  species.rs
tests/: integration.rs
